<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homeNavDestination"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.android.hikanumaruapp.presentasion.home.page.HomeFragment"
        tools:layout="@layout/fragment_home"
        android:label="@string/title_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_mangapage"
            app:destination="@id/navigation_mangapage" />
        <action
            android:id="@+id/action_navigation_home_to_searchPageFragment"
            app:destination="@id/searchPageFragment" />
    </fragment>
    <fragment
        android:id="@+id/searchPageFragment"
        android:name="ru.android.hikanumaruapp.presentasion.search.SearchPageFragment"
        tools:layout="@layout/search_page_fragment"
        android:label="search_page_fragment" >
        <action
            android:id="@+id/action_searchPageFragment_to_navigation_mangapage"
            app:destination="@id/navigation_mangapage" />
    </fragment>
    <fragment
        android:id="@+id/navigation_mangapage"
        android:name="ru.android.hikanumaruapp.presentasion.mangapage.MangaPageFragment"
        tools:layout="@layout/fragment_manga_page"
        android:label="@string/title_mangapage">
        <action
            android:id="@+id/action_navigation_mangapage_to_navigation_reader"
            app:destination="@id/navigation_reader"
            app:popUpTo="@id/navigation_mangapage" />
        <action
            android:id="@+id/action_navigation_mangapage_to_navigation_chapters_page"
            app:destination="@id/navigation_chapters_page" />
    </fragment>
    <fragment
        android:id="@+id/navigation_chapters_page"
        android:name="ru.android.hikanumaruapp.presentasion.mangapage.chapterspage.ChaptersPageFragment"
        tools:layout="@layout/fragment_chapters_page"
        android:label="@string/title_chapter_page_manga_page"/>
    <fragment
        android:id="@+id/navigation_reader"
        android:name="ru.android.hikanumaruapp.presentasion.reader.ReaderFragment"
        tools:layout="@layout/fragment_reader"
        android:label="@string/navigation_reader_fragment" />
</navigation>