<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.reset.password.ResetPasswordStageOneFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        >

        <TextView
            android:id="@+id/TVTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Headline_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="56dp"
            android:text="@string/reset_password_title_two"
            android:textColor="@color/black"
            />

        <EditText
            android:id="@+id/et_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Pre_Headline"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TVTitle"
            android:gravity="start"
            android:layout_marginTop="56dp"
            android:inputType="number"
            android:maxEms="6"
            android:maxLines="1"
            android:hint="@string/reset_password_code_hint"
            android:textColorHint="@color/grey_light_alternative_2"
            android:textColor="@color/grey_light_alternative_7"
            />


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_stage_text"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_stage_two_reset_password"
            />

        <TextView
            android:id="@+id/tv_stage_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Callout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/TVNextStageReg"
            android:layout_marginBottom="36dp"
            android:text="@string/stage_two_in_three"
            android:textColor="@color/grey_light_alternative_5"
            />

        <TextView
            android:id="@+id/TVNextStageReg"
            style="@style/Text.Headline_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rectangle_rounded_all"
            android:backgroundTint="@color/grey_light_alternative_1"
            android:gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/TVBtnBackReg"
            android:text="@string/contines"
            android:textColor="@color/grey_light_alternative_3" />

        <TextView
            android:id="@+id/TVBtnBackReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:layout_marginBottom="38dp"
            style="@style/Text.Headline_5"
            android:textColor="@color/grey_light_alternative_5"
            android:text="@string/back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>